# hyper-text-stitcher

./: Cargo.toml  README.md
src/: command.rs  config.rs  main.rs  process.rs  render.rs  server.rs  template.rs
test/: components.yml  hypertext-stitcher.yml
test/components/: home.html
test/html/: index.html
test/html/other/: index.html
test/templates/: base.html  greeting.html  home.html
