[package]
name = "hyper-text-stitcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html_editor = "0.7.0"
rhai = "1.17.1"
clap = "4.5.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"