[package]
name = "hyper-text-stitcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httparse = "1.8.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
clap = { version = "4.5.1", features = ["derive"]}
tera = "1.19.1"